feat: add message util for department

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"build": "rm -rf dist && npx tsc && cp -r src/prisma dist/prisma",
 		"start": "node dist/index.js",
-		"dev": "nodemon --exec node -r @swc-node/register src/index.ts",
+		"dev": "nodemon --exec 'node -r @swc-node/register' src/index.ts",
 		"type-check": "tsc --noEmit --watch",
 		"lint": "eslint . --ext .ts",
 		"lint:fix": "eslint . --ext .ts --fix",
