--- a/package.json
+++ b/package.json
@@ -25,18 +25,23 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.11.0",
+    "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "joi": "^17.12.2",
+    "jsonwebtoken": "^9.0.2",
     "short-unique-id": "^5.0.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@swc-node/register": "^1.9.0",
     "@swc/core": "^1.4.11",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/mime": "^4.0.0",
     "@types/node": "^20.11.30",
     "@types/uuid": "^9.0.8",
