--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
+    "express-rate-limit": "^7.2.0",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "short-unique-id": "^5.0.3",
