--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.11.0",
+    "amqplib": "^0.10.3",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -39,6 +40,7 @@
   "devDependencies": {
     "@swc-node/register": "^1.9.0",
     "@swc/core": "^1.4.11",
+    "@types/amqplib": "^0.10.5",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
